Added more pipelines

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -1,3 +1,24 @@
 obesity:
   type: pandas.CSVDataset
   filepath: src/data/obesity_level.csv
+
+preprocessed_obesity:
+  type: pandas.ParquetDataset
+  filepath: src/Data_preparation/obesity_level.csv
+
+validated_obesity:
+  type: pandas.ParquetDataset
+  filepath: src/Data_validation/obesity_level.csv
+
+initial_model:
+  type: pickle.PickleDataset
+  filepath: src/Model_creation/obesity_classifier.joblib
+
+scored_model:
+  type: pickle.PickleDataset
+  filepath: src/Model_evaluation/scored_obesity_classifier.joblib
+
+saved_model:
+  type: pickle.PickleDataset
+  filepath: src/Model_save/final_obesity_classifier.joblib
+  versioned: true
