--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -4,21 +4,29 @@ obesity:
 
 preprocessed_obesity:
   type: pandas.ParquetDataset
-  filepath: src/lab_3/Data_preparation/obesity_level.csv
+  filepath: src/lab_4/Data_preparation/obesity_level.csv
 
 validated_obesity:
   type: pandas.ParquetDataset
-  filepath: src/lab_3/Data_validation/obesity_level.csv
+  filepath: src/lab_4/Data_validation/obesity_level.csv
 
-initial_model:
+challenger_model:
   type: pickle.PickleDataset
-  filepath: src/lab_3/Model_creation/obesity_classifier.joblib
+  filepath: src/lab_4/Model_creation/challenger.joblib
+
+champion_model:
+  type: pickle.PickleDataset
+  filepath: src/lab_4/Model_champion/champion.joblib
+
+
+
+
 
 scored_model:
   type: pickle.PickleDataset
-  filepath: src/lab_3/Model_evaluation/scored_obesity_classifier.joblib
+  filepath: src/lab_4/Model_evaluation/scored_obesity_classifier.joblib
 
 saved_model:
   type: pickle.PickleDataset
-  filepath: src/lab_3/Model_save/final_obesity_classifier.joblib
+  filepath: src/lab_4/Model_save/final_obesity_classifier.joblib
   versioned: true
